update spec & template to comply more to subject
